--- a/src/main/latex/main.tex
+++ b/src/main/latex/main.tex
@@ -44,6 +44,19 @@
 
     \selectlanguage{english}
 
+
+    \section{Introduction}\label{sec:introduction}
+
+
+    \section{Principles}\label{sec:principles}
+    The elegant objects paradigm is based on eleven principles.
+    They will be discussed in this chapter, along with some examples and some limitations of the principles.
+
+    \subsection{No Null}\label{subsec:no-null}
+    Null references has been described as the billion-dollar mistake multiple times.
+
+
+
 %    \bibliography{main}
 %    \bibliographystyle{plain}
 
