--- a/src/main/latex/main.bib
+++ b/src/main/latex/main.bib
@@ -1,3 +1,24 @@
 %! Author = florian
 %! Date = 30.10.22
 
+@article{elegant-objects,
+    author	 = {Yegor Bugayenko},
+    title	 = {Elegant Objects},
+    year	 = {2022},
+    url	 = {https://www.elegantobjects.org/},
+    date = {2022-12-11},
+}
+
+@article{tell-dont-ask,
+    author	 = {Dan Parking},
+    title	 = {The Tell Don’t Ask Principle Explained},
+    year	 = {2018},
+    url	 = {https://danparkin.com/2018/09/18/tell-dont-ask/}
+}
+
+@article{encapsulation,
+    author	={Thorben Janssen},
+    title	={OOP Concept for Beginners: What is Encapsulation},
+    year	={2022},
+    url	={https://stackify.com/oop-concept-for-beginners-what-is-encapsulation/}
+}
