--- a/src/main/latex/main.tex
+++ b/src/main/latex/main.tex
@@ -8,6 +8,7 @@
 \usepackage{amsmath}
 \usepackage[english]{babel}
 \usepackage{url}
+\usepackage{listings}
 \usepackage{libertine}
 \usepackage{libertinust1math}
 \usepackage[T1]{fontenc}
@@ -49,15 +50,12 @@
 
 
     \section{Principles}\label{sec:principles}
-    The elegant objects paradigm is based on eleven principles.
-    They will be discussed in this chapter, along with some examples and some limitations of the principles.
+    \input{sections/principles}
 
-    \subsection{No Null}\label{subsec:no-null}
-    Null references has been described as the billion-dollar mistake multiple times.
+    \section{Evaluation of the Elegant Objects Paradigm}\label{sec:evaluation-of-the-elegant-objects-paradigm}
+    \input{sections/evaluation}
 
-
-
-%    \bibliography{main}
-%    \bibliographystyle{plain}
+    \bibliographystyle{IEEEtran}
+    \bibliography{main}
 
 \end{document}
