--- a/src/main/latex/main.bib
+++ b/src/main/latex/main.bib
@@ -22,3 +22,17 @@
     year	={2022},
     url	={https://stackify.com/oop-concept-for-beginners-what-is-encapsulation/}
 }
+
+@article{temporal-coupling,
+    author	={Vladimir Khorikov},
+    title	={Temporal coupling and Immutability},
+    year	={2022},
+    url	={https://enterprisecraftsmanship.com/posts/temporal-coupling-and-immutability/}
+}
+
+@article{er-postfix,
+    author	={Recent Works. Who},
+    title	={Carlo Pescio: Your coding conventions are hurting you},
+    year	={2022},
+    url	={http://www.carlopescio.com/2011/04/your-coding-conventions-are-hurting-you.html}
+}
