--- a/src/main/latex/sections/evaluation.tex
+++ b/src/main/latex/sections/evaluation.tex
@@ -14,3 +14,14 @@ In other words, more complicated null checks.
     \caption{Empty Object}
     \lstinputlisting[language=Java,basicstyle=\tiny,label={lst:empty-object}]{assets/code/Employee.java}\label{fig:empty-object}
 \end{figure}
+
+Another questionable principle is described in subsection\ \ref{subsec:no-instanceof-type-casting-or-reflection}.
+The author writes on this blog post\footnote{\url{https://www.yegor256.com/2015/04/02/class-casting-is-anti-pattern.html}} that type casting is an anti-pattern.
+What the author means is that up-casting is an anti-pattern, as down-casting is required for some of his examples to work.
+In Java, in order to not throw an error, an explicit up cast is required, as can be seen in figure\ \ref{fig:up-and-down-casting}
+
+\begin{figure}[h]
+    \caption{Up and down casting}
+    \lstinputlisting[language=Java,basicstyle=\tiny,label={lst:up-and-down-casting},firstline=3, lastline=4]{assets/code/Casting.java}
+    \label{fig:up-and-down-casting}
+\end{figure}
