Finish principles and start with the evaluation

--- a/src/main/latex/main.bib
+++ b/src/main/latex/main.bib
@@ -9,6 +9,13 @@
     date = {2022-12-11},
 }
 
+@article{tell-dont-ask-martin-fowler,
+    author	={Martin Fowler},
+    title	={TellDontAsk},
+    year	={2013},
+    url	={https://martinfowler.com/bliki/TellDontAsk.html}
+}
+
 @article{tell-dont-ask,
     author	 = {Dan Parking},
     title	 = {The Tell Don’t Ask Principle Explained},
@@ -35,4 +42,11 @@
     title	={Carlo Pescio: Your coding conventions are hurting you},
     year	={2022},
     url	={http://www.carlopescio.com/2011/04/your-coding-conventions-are-hurting-you.html}
+}
+
+@article{orm-vietnam-of-cs,
+    author	={Jeff Atwood},
+    title	={Object-Relational Mapping is the Vietnam of Computer Science},
+    year	={2006},
+    url	={https://blog.codinghorror.com/object-relational-mapping-is-the-vietnam-of-computer-science/}
 }
