--- a/src/main/latex/main.tex
+++ b/src/main/latex/main.tex
@@ -45,14 +45,10 @@
 
     \selectlanguage{english}
 
+    \input{sections/introduction}
 
-    \section{Introduction}\label{sec:introduction}
-
-
-    \section{Principles}\label{sec:principles}
     \input{sections/principles}
 
-    \section{Evaluation of the Elegant Objects Paradigm}\label{sec:evaluation-of-the-elegant-objects-paradigm}
     \input{sections/evaluation}
 
     \bibliographystyle{IEEEtran}
