Work on evaluation

--- a/src/main/latex/main.tex
+++ b/src/main/latex/main.tex
@@ -15,6 +15,7 @@
 \usepackage{hyperref}
 \usepackage{glossaries}
 \usepackage[a4paper, total={6in, 9in}]{geometry}
+\usepackage{graphicx}
 
 %Glossary
 \makeglossaries
